macros/context-derive/tests/ui/05_not_a_struct.stderr
error: Context Extensions traits can only be derived for structs
 --> tests/ui/05_not_a_struct.rs:4:6
  |
4 | enum MyContext {
  |      ^^^^^^^^^
