macros/context-derive/tests/ui/05_not_a_struct.rs
use gadget_sdk::ctx::KeystoreContext;

#[derive(KeystoreContext)]
enum MyContext {
    Variant1,
    Variant2,
}

fn main() {}
